more last minute fixes cleaning some leftover bugs

--- a/Pages/AdminNews.cshtml
+++ b/Pages/AdminNews.cshtml
@@ -23,6 +23,16 @@
     <link rel="stylesheet" href="~/css/admin-news.css" />
     <link rel="stylesheet" href="~/css/post-card.css" />
     <link rel="stylesheet" href="~/css/mobile-responsive.css" />
+    <style>
+        /* Hide right sidebar on AdminNews page */
+        .right-sidebar {
+            display: none !important;
+        }
+        /* Adjust main content to use full width when right sidebar is hidden */
+        .main-content {
+            max-width: 100% !important;
+        }
+    </style>
 }
 
 <!-- Page Header -->
