--- a/Pages/Shared/_RightSidePanelPartial.cshtml
+++ b/Pages/Shared/_RightSidePanelPartial.cshtml
@@ -22,7 +22,7 @@
                     <span>Loading trending topics...</span>
                 </div>
             </div>
-            <a href="/Search?type=posts&trending=true" class="show-more-link">Show more trending</a>
+            @* <a href="/Search?type=posts&trending=true" class="show-more-link">Show more trending</a> *@
         </div>
 
         
